# tlpi-exercises

./: .gitignore  CMakeLists.txt  README.md
ch04/: tea.c
include/lb/: error.h  generic.h
src/ch04/: tea.c  tee.c
src/lib/: error.c  generic.c
